--- a/Events/Pages/HomePage.xaml
+++ b/Events/Pages/HomePage.xaml
@@ -2,7 +2,23 @@
 <ContentPage 
 	Title="Home"
 	Icon="ic_home.png"
+	xmlns:viewmodels="clr-namespace:Events.ViewModels;assembly=Events"
+	xmlns:templates="clr-namespace:Events.Controls;assembly=Events"
 	xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Events.HomePage">
+	<ContentPage.BindingContext>
+		<viewmodels:HomeViewModel />
+	</ContentPage.BindingContext>
 	<ContentPage.Content>
+		<ListView 
+			ItemSelected="Handle_ItemSelected"
+			HasUnevenRows="true" 
+			SeparatorVisibility="None" 
+			ItemsSource="Feed">
+			<ListView.ItemTemplate>
+				<DataTemplate>
+					<templates:EventFeedViewCell />
+				</DataTemplate>
+			</ListView.ItemTemplate>
+		</ListView>
 	</ContentPage.Content>
 </ContentPage>
