--- a/Events/Pages/HomePage.xaml
+++ b/Events/Pages/HomePage.xaml
@@ -14,6 +14,7 @@
 	</ContentPage.ToolbarItems>
 	<ContentPage.Content>
 		<ListView 
+			BackgroundColor="#E9EAEE"
 			ItemSelected="Handle_ItemSelected"
 			HasUnevenRows="true"
 			SeparatorVisibility="None" 
